--- a/front-packages/admin/.env
+++ b/front-packages/admin/.env
@@ -1,7 +1,7 @@
 VITE_APP_NAME=metronic-tailwind-react
 VITE_APP_VERSION=1=9.1.1
 GENERATE_SOURCEMAP=false
-
+VITE_DEFAULT_LOCALE=en_US
 ## JWT auth api
 ## global url https://preview.keenthemes.com/hero-api/api
 ## local url http://127.0.0.1:8000/api
