--- a/front-packages/admin/package.json
+++ b/front-packages/admin/package.json
@@ -22,6 +22,7 @@
     "@formatjs/intl-relativetimeformat": "^11.4.4",
     "@mui/base": "5.0.0-beta.40",
     "@mui/material": "^6.1.6",
+    "@mui/x-tree-view": "*",
     "@mui/utils": "^6.1.6",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -34,7 +35,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-query": "^5.59.20",
     "@tanstack/react-table": "^8.20.5",
@@ -98,7 +99,7 @@
     "typescript-eslint": "^8.14.0",
     "vite": "^5.4.11"
   },
-  "workspaces":[
+  "workspaces": [
     "./packages/shared",
     "./packages/shop"
   ]
