--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -4,7 +4,10 @@ framework:
 
     # Note that the session will be started ONLY if you read or write from it.
     session: true
-
+    serializer:
+        enabled: true
+    form:
+        enabled: true
     #esi: true
     #fragments: true
 
