--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -11,7 +11,7 @@ security:
                 property: username
     firewalls:
         dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
+            pattern: ^/(_(profiler|wdt)|css|images|js|assets)/
             security: false
         login:
             pattern: ^/api/login
