--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-
+    upload_path: '%env(resolve:UPLOAD_URI)%'
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -19,6 +19,16 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
-
+    # States
+    App\State\UserPasswordHasher:
+        bind:
+            $processor: '@api_platform.doctrine.orm.state.persist_processor'
+    # Listneers
+    App\EventListener\LoginListener:
+        tags:
+            - { name: 'kernel.event_listener', event: 'Symfony\Component\Security\Http\Event\LoginSuccessEvent' }
+    # Validators
+    App\Validator\Constraints\AssetNotUsedAsAvatarValidator:
+        tags: ['validator.constraint_validator']      
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
