--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,8 +1,8 @@
 api_platform:
-    version: 1.0.0
     title: Hello API Platform
-    # enable_docs: true
-    # enable_entrypoint: true
+    version: 1.0.0
+    enable_docs: true
+    enable_swagger: true
     enable_swagger_ui: true
     enable_link_security: true
     formats:
@@ -16,12 +16,19 @@ api_platform:
         html: ['text/html']
     defaults:
         stateless: true
+        pagination_client_enabled: true
         pagination_items_per_page: 10
+        pagination_maximum_items_per_page: 100
+        pagination_client_items_per_page: true  #allow client to pass dynamic item perpage from (react, veu, etc)
         cache_headers:
             vary: ['Content-Type', 'Authorization', 'Origin']
         extra_properties:
             standard_put: true
             rfc_7807_compliant_errors: true
+        middleware: []
     collection:
+        order_parameter_name: 'order'
         pagination:
-            page_parameter_name: _page
+            enabled: true
+            page_parameter_name: page
+            items_per_page_parameter_name: size
