--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -8,41 +8,51 @@ security:
         database_user_provider:
             entity:
                 class: App\Entity\Security\User
-                property: username
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js|assets)/
             security: false
-        login:
-            pattern: ^/api/login
+
+        admin_login:
+            pattern: ^/api/login/admin
             stateless: true
             json_login:
-                check_path: /api/login_check
+                check_path: /api/login/admin
+                username_path: email
+                password_path: password
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+
+        customer_login:
+            pattern: ^/api/login/customer
+            stateless: true
+            json_login:
+                check_path: /api/login/customer
+                username_path: email
+                password_path: password
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
         api:
             pattern:   ^/api
             stateless: true
+            # provider: database_user_provider
             jwt: ~
+        
 
-        # main:
-        #     lazy: true
-        #     provider: users_in_memory
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/api/login, roles: PUBLIC_ACCESS }
         # - { path: ^/api,       roles: PUBLIC_ACCESS }
+        - { path: ^/api/login/admin, roles: PUBLIC_ACCESS }
+        - { path: ^/api/login/customer, roles: PUBLIC_ACCESS }
         - { path: ^/api/docs, roles: PUBLIC_ACCESS }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
     security:
