--- a/.env
+++ b/.env
@@ -24,8 +24,8 @@ APP_SECRET=
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:firoj123@127.0.0.1:3306/spygar_pim_react_api_platform_db?serverVersion=8.0.32&charset=utf8mb4"
-# DATABASE_URL="mysql://admin:admin123@mysql:3306/spygar_docker_edition_db?serverVersion=8.0.32&charset=utf8mb4" # docker database configuration(don't remove)
+# DATABASE_URL="mysql://admin:admin123@127.0.0.1:3306/spygar_docker_edition_db?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL="mysql://admin:admin123@spygar-mysql:3306/spygar_docker_edition_db?serverVersion=8.0.32&charset=utf8mb4" # docker database configuration(don't remove)
 
 ###< doctrine/doctrine-bundle ###
 
