--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,18 @@ version: '3.8'
 services:
   php:
     build: .
-    container_name: php
+    container_name: spygar-php
     volumes:
       - ./:/var/www/html
     ports:
       - "9001:9001" # store port
       - "9002:9002" # admin port
     networks:
-      - symfony
+      - spygar-pim
 
   nginx:
     image: nginx:alpine
-    container_name: nginx
+    container_name: spygar-nginx
     volumes:
       - ./:/var/www/html
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
@@ -23,11 +23,11 @@ services:
     depends_on:
       - php
     networks:
-      - symfony
+      - spygar-pim
 
   db:
     image: mysql:8.0
-    container_name: mysql
+    container_name: spygar-mysql
     environment:
       MYSQL_ROOT_PASSWORD: root123
       MYSQL_DATABASE: spygar_docker_edition_db
@@ -38,21 +38,21 @@ services:
     volumes:
       - db_data:/var/lib/mysql
     networks:
-      - symfony
+      - spygar-pim
 
   adminer:
     image: adminer
-    container_name: adminer
+    container_name: spygar-adminer
     ports:
       - "8081:8080"
     depends_on:
       - db
     networks:
-      - symfony
+      - spygar-pim
 
 volumes:
   db_data:
 
 networks:
-  symfony:
+  spygar-pim:
     driver: bridge
