--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "spygar-pim-react-api-platform",
+  "name": "spygar-pim",
   "private": true,
   "version": "9.1.2",
   "type": "module",
   "scripts": {
-    "build": "npm --prefix front-packages/admin run build && npm --prefix front-packages/shop run build"
+    "build": "npm --prefix front-packages/spygar-admin run build && npm --prefix front-packages/spygar-store run build"
   }
 }
